--- a/Skylt/index.html
+++ b/Skylt/index.html
@@ -139,7 +139,7 @@
                         <i class="fa fa-calendar-alt"></i> Arbetar: Alla dagar 08-17<br />
 
                         <!-- room number/location -->
-                        <i class="fa fa-map-marker-alt"></i> Sal: 126, Våning: 1 <br><br><br><br><br><br><br><br><br/>
+                        <i class="fa fa-map-marker-alt"></i> Sal: 126, våning 1 <br><br><br><br><br><br><br><br><br/>
                     </p>
                 </div>
 
@@ -182,7 +182,7 @@
                         <i class="fa fa-calendar-alt"></i> Arbetar: Alla dagar 08-12<br />
 
                         <!-- room number/location -->
-                        <i class="fa fa-map-marker-alt"></i> Sal: 326, Våning: 3 <br><br><br><br><br><br />
+                        <i class="fa fa-map-marker-alt"></i> Sal: 326, våning 3 <br><br><br><br><br><br />
                     </p>
                 </div>
 
@@ -223,7 +223,7 @@
                         <!-- Working days and hours -->
                         <i class="fa fa-calendar-alt"></i> Arbetar: Alla dagar utom tisdagar ca 08-16<br />
                         <!-- room number/location -->
-                        <i class="fa fa-map-marker-alt"></i> Sal: 327, Våning: 3 <br><br><br><br><br><br />
+                        <i class="fa fa-map-marker-alt"></i> Sal: 327, våning 3 <br><br><br><br><br><br />
                     </p>
                 </div>
 
@@ -246,7 +246,7 @@
                         <div class="col-7">
                             <p style="padding-left: 10px;">
                                 <!-- Info -->
-                                Maud arbetar som skolsköterska. En skolsköterska erbjuder alla elever hälsobesök med hälsosamtal i åk 1.
+                                Maud arbetar som skolsköterska. En skolsköterska erbjuder alla elever hälsobesök med hälsosamtal i årskurs 1.
                                 Som gymnasieelev förväntas man, med stöd av vårdnadshavare, att ta eget ansvar för mediciner som man eventuellt behöver ta under skoldagen. Skolsköterskor har tystnadsplikt.
 
                             </p>
@@ -267,7 +267,7 @@
                         <i class="fa fa-calendar-alt"></i> Arbetar: Måndagar, onsdagar, jämna fredagar 08-17<br />
 
                         <!-- room number/location -->
-                        <i class="fa fa-map-marker-alt"></i> Sal: 329, Våning: 3 <br><br><br><br><br><br />
+                        <i class="fa fa-map-marker-alt"></i> Sal: 329, våning 3 <br><br><br><br><br><br />
                     </p>
                 </div>
 
@@ -309,7 +309,7 @@
                         <i class="fa fa-calendar-alt"></i> Arbetar: Alla dagar 08-17<br />
 
                         <!-- room number/location -->
-                        <i class="fa fa-map-marker-alt"></i> Sal: 126, Våning: 1 <br><br><br><br><br><br />
+                        <i class="fa fa-map-marker-alt"></i> Sal: 126, våning 1 <br><br><br><br><br><br />
                     </p>
                 </div>
 
@@ -351,7 +351,7 @@
                         <i class="fa fa-calendar-alt"></i> Arbetar: Alla dagar 08-17<br />
 
                         <!-- room number/location -->
-                        <i class="fa fa-map-marker-alt"></i> Sal: 127, Våning: 1 <br><br><br><br><br><br /> 
+                        <i class="fa fa-map-marker-alt"></i> Sal: 127, våning 1 <br><br><br><br><br><br /> 
                     </p>
                 </div>
                 <div class="carousel-item">
@@ -393,7 +393,7 @@
                         <i class="fa fa-calendar-alt"></i> Arbetar: Torsdagar 08-16<br />
 
                         <!-- room number/location -->
-                        <i class="fa fa-map-marker-alt"></i> Sal: 329, Våning: 3 <br><br><br><br><br><br />
+                        <i class="fa fa-map-marker-alt"></i> Sal: 329, våning 3 <br><br><br><br><br><br />
                     </p>
                 </div>
                 <div class="carousel-item">
@@ -434,7 +434,7 @@
                         <i class="fa fa-calendar-alt"></i> Arbetar: Torsdagar 08-16<br />
 
                         <!-- room number/location -->
-                        <i class="fa fa-map-marker-alt"></i> Sal: 324, Våning: 3 <br><br><br><br><br><br /> 
+                        <i class="fa fa-map-marker-alt"></i> Sal: 324, våning 3 <br><br><br><br><br><br /> 
                     </p>
                 </div>
             </div>
