Made megans text shorter

--- a/Skylt/index.html
+++ b/Skylt/index.html
@@ -205,7 +205,7 @@
                         <div class="col-7">
                             <p style="padding-left: 10px;">
                                 <!-- Info -->
-                                Megan arbetar som skolkurator. En skolkurator arbetar med elevernas psykosociala hälsa i frågor som rör trygghet, trivsel, arbetsmiljö, relationer och den sociala situationen både i och utanför skolan. Megan arbetar bland annat med samtalsstöd till elever och ger handledning och konsultation till övrig skolpersonal och vårdnadshavare. Kuratorer har tystnadsplikt.
+                                Megan arbetar som skolkurator. En skolkurator arbetar med elevernas psykosociala hälsa som rör trygghet, trivsel, arbetsmiljö, relationer och den sociala situationen både i och utanför skolan. Megan arbetar bl.a. med samtalsstöd till elever och ger handledning och konsultation till övrig skolpersonal och vårdnadshavare. Kuratorer har tystnadsplikt.
                             </p>
                         </div>
                         <div class="col-4 text-center">
