Added Annas text

--- a/Skylt/index.html
+++ b/Skylt/index.html
@@ -373,8 +373,8 @@
                         <div class="col-7">
                             <p style="padding-left: 10px;">
                                 <!-- Info -->
-                                Anna arbetar som skolsköterska. En skolsköterska erbjuder alla elever hälsobesök med hälsosamtal i åk1.
-                                Som gymnasieelev förväntas man, med stöd av vårdnadshavare, att ta eget ansvar för mediciner som man eventuellt behöver ta under skoldagen. Skolsköterskor har tystnadsplikt.
+                                Anna arbetar som Skolsköterska på Procivitas. Skolsköterskan erbjuder alla elever ett hälsobesök på Gymnasiet och följer upp tidigare kontroller hos Skolsköterska. 
+                                Boka tid hos Anna antingen genom att skicka ett mail eller kom förbi då hon är på skolan.
                             </p>
                         </div>
                         <div class="col text-center">
