Updated text and fixed typos

--- a/Skylt/index.html
+++ b/Skylt/index.html
@@ -119,7 +119,7 @@
                         <div class="col-7">
                             <p style="padding-left: 10px;">
                                 <!-- Info -->
-                                Mathias är rektor och ytterst ansvarig för elevhälsoteamet. 
+                                Mathias är rektor och ytterst ansvarig för elevhälsoteamet. Rektor har ansvar för att eleverna får det stöd de har rätt till för att nå målen.
 
                             </p>
                         </div>
@@ -290,7 +290,7 @@
                         <div class="col-7">
                             <p style="padding-left: 10px;">
                                 <!-- Info -->
-                                Henrik arbetar som biträdande rektor och specialpedagog. En specialpedagog samarbetar med övrig personal för att göra skolan tillgänglig för alla elever. Om du behöver hjälp i dina studier och har svårt att nå målen kan specialpedagogen se över din studiesituation för att hitta vägar och den hjälp du behöver.
+                                Henrik är biträdande rektor och specialpedagog. En specialpedagog samarbetar med övrig personal för att göra skolan tillgänglig för alla elever. Om du behöver hjälp i dina studier och har svårt att nå målen kan specialpedagogen se över din studiesituation för att hitta vägar och den hjälp du behöver.
                             </p>
                         </div>
                         <div class="col text-center">
@@ -373,7 +373,7 @@
                         <div class="col-7">
                             <p style="padding-left: 10px;">
                                 <!-- Info -->
-                                Anna arbetar som Skolsköterska på Procivitas. Skolsköterskan erbjuder alla elever ett hälsobesök på Gymnasiet och följer upp tidigare kontroller hos Skolsköterska. 
+                                Anna arbetar som skolsköterska på Procivitas. Skolsköterskan erbjuder alla elever ett hälsobesök på gymnasiet och följer upp tidigare kontroller hos skolsköterska. 
                                 Boka tid hos Anna antingen genom att skicka ett mail eller kom förbi då hon är på skolan.
                             </p>
                         </div>
@@ -415,7 +415,7 @@
                         <div class="col-7">
                             <p style="padding-left: 10px;">
                                 <!-- Info -->
-                                Jasmine arbetar som skolkurator. En skolkurator arbetar med elevernas psykosociala hälsa i frågor som rör trygghet, trivsel, arbetsmiljö, relationer och den sociala situationen både i och utanför skolan.
+                                Jasmine arbetar som skolkurator på Procivitas. En skolkurator arbetar med elevernas psykosociala hälsa i frågor som rör trygghet, trivsel, arbetsmiljö, relationer och den sociala situationen både i och utanför skolan.
                             </p>
                         </div>
                         <div class="col text-center">
