--- a/site/index.html
+++ b/site/index.html
@@ -1,20 +1,27 @@
 ---
 layout: default
 ---
+
+{% assign eht_members = site.data.eht %}
+{% assign procivitas_members = site.data.procivitas %}
+
 <div class="container-fluid">
     <div id="carouselExampleIndicators" class="carousel slide person-info" data-ride="carousel" data-pause="false" data-interval="15000" style="height: 10rem">
         <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
+            {% for member in eht_members %}
+                {% if forloop.first %}
+                    <li data-target="#carouselExampleIndicators" data-slide-to="{{forloop.index0}}" class="active"></li>
+                {% else %}
+                    <li data-target="#carouselExampleIndicators" data-slide-to="{{forloop.index0}}"></li>
+                {% endif %}
+            {% endfor %}
+
+            {% for member in procivitas_members %}
+                <li data-target="#carouselExampleIndicators" data-slide-to="{{ forloop.index0 | plus: eht_members.size }}"></li>
+            {% endfor %}
         </ol>
         <div class="carousel-inner">
-            {% for member in site.data.eht %}
+            {% for member in eht_members %}
                 {% if forloop.first %}
                 <div class="carousel-item active">
                 {% else %}
@@ -50,7 +57,7 @@ layout: default
                     </p>
                 </div>
             {% endfor %}
-            {% for member in site.data.procivitas %}
+            {% for member in procivitas_members %}
                 <div class="carousel-item">
                     <header class="text-center">
                         <object data="assets/img/ProCivitas_logotyp.png" type="image/svg+xml" width="218" height="218">
