Fix filetype on procivitas images

--- a/site/index.html
+++ b/site/index.html
@@ -78,7 +78,7 @@ layout: default
                             </p>
                         </div>
                         <div class="col-4 text-center">
-                            <img class="profile-image" src="assets/img/Profile/{{member.NAMN}}.jpg" />
+                            <img class="profile-image" src="assets/img/Profile/{{member.NAMN}}.png" />
                         </div>
                     </div>
                     <p class="contact">
