--- a/site/index.html
+++ b/site/index.html
@@ -111,6 +111,6 @@ layout: default
         </div>
     </div>
 </div>
-<div style="position:absolute; right:15px; bottom:15px;">
-    <img src="assets/img/TE4-logo-transparent.png" alt="TE4" height="120px;">
+<div style="position:absolute; right:15px; top:25px;">
+    <img src="assets/img/TE4-logo-transparent.png" alt="TE4" height="60px">
 </div>
