--- a/site/index.html
+++ b/site/index.html
@@ -6,7 +6,7 @@ layout: default
 {% assign procivitas_members = site.data.procivitas %}
 
 <div class="container-fluid">
-    <div class="carousel slide person-info" data-ride="carousel" data-pause="false" data-interval="15000">
+    <div id ="carouselExampleControls" class="carousel slide person-info" data-ride="carousel" data-pause="false" data-interval="15000">
         <div class="carousel-inner">
             {% for member in eht_members %}
                 {% if forloop.first %}
@@ -109,6 +109,17 @@ layout: default
                 </div>
             {% endfor %}
         </div>
+
+        {% if jekyll.environment == "dev" %}
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        {% endif %}
     </div>
 </div>
 <div style="position:absolute; right:15px; top:25px;">
