Fixed bug in index.html

--- a/site/index.html
+++ b/site/index.html
@@ -40,7 +40,10 @@ layout: default
                         <div class="col-4">
                             <p class="contact">
                                 <i class="fa fa-envelope"></i> E-post: {{ member.E-POST }}<br />
-                                {% if member.INSTAGRAM %}
+                                {% if member.INSTAGRAM and member.TELEFON %}
+                                <i class="fa fa-phone"></i> Telefon: {{ member.TELEFON }}<br />
+                                <i class="fab fa-instagram"></i> Instagram: {{ member.INSTAGRAM }}<br />
+                                {% elsif member.INSTAGRAM %}
                                 <i class="fab fa-instagram"></i> Instagram: {{ member.INSTAGRAM }}<br />
                                 {% else %}
                                 <i class="fa fa-phone"></i> Telefon: {{ member.TELEFON }}<br />
@@ -88,7 +91,10 @@ layout: default
                         <div class="col-4">
                             <p class="contact">
                                 <i class="fa fa-envelope"></i> E-post: {{ member.E-POST }}<br />
-                                {% if member.INSTAGRAM %}
+                                {% if member.INSTAGRAM and member.TELEFON %}
+                                <i class="fa fa-phone"></i> Telefon: {{ member.TELEFON }}<br />
+                                <i class="fab fa-instagram"></i> Instagram: {{ member.INSTAGRAM }}<br />
+                                {% elsif member.INSTAGRAM %}
                                 <i class="fab fa-instagram"></i> Instagram: {{ member.INSTAGRAM }}<br />
                                 {% else %}
                                 <i class="fa fa-phone"></i> Telefon: {{ member.TELEFON }}<br />
