--- a/site/index.html
+++ b/site/index.html
@@ -104,7 +104,7 @@ layout: default
                                 {% if member.TELEFON %}
                                 <i class="fa fa-phone"></i> Telefon: {{ member.TELEFON }}<br />
                                 {% endif %}
-                                
+
                                 {% if member.INSTAGRAM %}
                                 <i class="fab fa-instagram"></i> Instagram: {{ member.INSTAGRAM }}<br />
                                 {% endif %}
@@ -123,6 +123,55 @@ layout: default
                     </div>
                 </div>
             {% endfor %}
+            <div class="carousel-item">
+                <header class="text-center">
+                    <object data="assets/img/ElevHalsaLogo.svg" type="image/svg+xml" width="218" height="218">
+                    </object>
+                </header>
+                <div class="row align-items-center">
+
+                    <div class="col-6">
+                        <div class="important-date name p-1 pr-5 d-flex justify-content-between">
+                            <h2>SACO-Mässan</h2>
+                            <h2 class="timer">14 dagar kvar</h2>
+                        </div>
+                        <p>
+                            Sista anmälning för SACO-mässan är 2020-12-31. Kom ihåg att anmäla er hos Therese!
+                        </p>
+                    </div>
+
+                    <div class="col-6">
+                        <div class="important-date name p-1 pr-5 d-flex justify-content-between">
+                            <h2>SACO-Mässan</h2>
+                            <h2 class="timer">14 dagar kvar</h2>
+                        </div>
+                        <p>
+                            Sista anmälning för SACO-mässan är 2020-12-31. Kom ihåg att anmäla er hos Therese!
+                        </p>
+                    </div>
+
+                    <div class="col-6">
+                        <div class="important-date name p-1 pr-5 d-flex justify-content-between">
+                            <h2>Högskoleprov</h2>
+                            <h2 class="timer">3 veckor kvar</h2>
+                        </div>
+                        <p>
+                            Sista anmälning för högskoleprovet är 2021-01-01. Kom ihåg att anmäla er på www.hogskolaprovet.se
+                        </p>
+                    </div>
+
+                    <div class="col-6">
+                        <div class="important-date name p-1 pr-5 d-flex justify-content-between">
+                            <h2>Högskoleprov</h2>
+                            <h2 class="timer">3 veckor kvar</h2>
+                        </div>
+                        <p>
+                            Sista anmälning för högskoleprovet är 2021-01-01. Kom ihåg att anmäla er på www.hogskolaprovet.se
+                        </p>
+                    </div>
+
+                </div>
+            </div>
         </div>
 
         {% if jekyll.environment == "dev" %}
