--- a/site/index.html
+++ b/site/index.html
@@ -128,44 +128,44 @@ layout: default
                     <object data="assets/img/ElevHalsaLogo.svg" type="image/svg+xml" width="218" height="218">
                     </object>
                 </header>
-                <div class="row align-items-center">
+                <div class="row">
 
-                    <div class="col-6">
-                        <div class="important-date name p-1 pr-5 d-flex justify-content-between">
+                    <div class="countdown-box col-6 pb-3">
+                        <div class="name p-1 pl-2 pr-5 d-flex justify-content-between">
                             <h2>SACO-Mässan</h2>
                             <h2 class="timer">14 dagar kvar</h2>
                         </div>
-                        <p>
+                        <p class="pr-5">
                             Sista anmälning för SACO-mässan är 2020-12-31. Kom ihåg att anmäla er hos Therese!
                         </p>
                     </div>
 
-                    <div class="col-6">
-                        <div class="important-date name p-1 pr-5 d-flex justify-content-between">
+                    <div class="countdown-box col-6 pb-3">
+                        <div class="name p-1 pl-2 pr-5 d-flex justify-content-between">
                             <h2>SACO-Mässan</h2>
                             <h2 class="timer">14 dagar kvar</h2>
                         </div>
-                        <p>
+                        <p class="pr-5">
                             Sista anmälning för SACO-mässan är 2020-12-31. Kom ihåg att anmäla er hos Therese!
                         </p>
                     </div>
 
-                    <div class="col-6">
-                        <div class="important-date name p-1 pr-5 d-flex justify-content-between">
+                    <div class="countdown-box col-6">
+                        <div class="name p-1 pl-2 pr-5 d-flex justify-content-between">
                             <h2>Högskoleprov</h2>
                             <h2 class="timer">3 veckor kvar</h2>
                         </div>
-                        <p>
+                        <p class="pr-5">
                             Sista anmälning för högskoleprovet är 2021-01-01. Kom ihåg att anmäla er på www.hogskolaprovet.se
                         </p>
                     </div>
 
-                    <div class="col-6">
-                        <div class="important-date name p-1 pr-5 d-flex justify-content-between">
+                    <div class="countdown-box col-6">
+                        <div class="name p-1 pl-2 pr-5 d-flex justify-content-between">
                             <h2>Högskoleprov</h2>
                             <h2 class="timer">3 veckor kvar</h2>
                         </div>
-                        <p>
+                        <p class="pr-5">
                             Sista anmälning för högskoleprovet är 2021-01-01. Kom ihåg att anmäla er på www.hogskolaprovet.se
                         </p>
                     </div>
