Changed logo on slide for important dates

--- a/site/index.html
+++ b/site/index.html
@@ -124,8 +124,7 @@ layout: default
             {% endfor %}
             <div class="carousel-item">
                 <header class="text-center">
-                    <object data="assets/img/ElevHalsaLogo.svg" type="image/svg+xml" width="218" height="218">
-                    </object>
+                    <img src="assets/img/NTI-logo.png"height="218" />
                 </header>
                 <div class="row">
 
