Changed some CSS and added copyright text

--- a/site/index.html
+++ b/site/index.html
@@ -121,45 +121,6 @@ layout: default
                     </div>
                 </div>
             {% endfor %}
-            <div id="dagens-yrke" class="carousel-item">
-                <header class="text-center">
-                    <img style="position: absolute; left: 0px;" src="assets/img/NTI-logo.png" height="148" />
-                    <div>
-                        <h1 id="dagens-yrke-yrke"></h1>
-                        <div class="title-underline"></div>
-                    </div>
-                </header>
-                <div class="row">
-                    <div class="col-7">
-                        <h3 class="name">Beskrivning</h3>
-                        <p id="dagens-yrke-beskrivning">
-                        </p>
-                    </div>
-                    <div class="col-5">
-                        <div class="row">
-                            <div class="col-12">
-                                <h3 class="name">Genomsnittlig bruttolön</h3>
-                                <p id="dagens-yrke-lon">
-                                </p>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-12">
-                                <h3 class="name">Utbildning</h3>
-                                <p id="dagens-yrke-utbildning">
-                                </p>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-12">
-                                <h3 class="name">Framtidsutsikter</h3>
-                                <p id="dagens-yrke-framtidsutsikter">
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
             <div class="carousel-item">
                 <header class="text-center">
                     <img src="assets/img/NTI-logo.png" height="218" />
@@ -206,6 +167,48 @@ layout: default
                         </p>
                     </div>
 
+                </div>
+            </div>
+            <div id="dagens-yrke" class="carousel-item">
+                <header class="text-center">
+                    <img style="position: absolute; left: 0px;" src="assets/img/NTI-logo.png" height="148" />
+                    <div>
+                        <h1 id="dagens-yrke-yrke"></h1>
+                        <div class="title-underline"></div>
+                    </div>
+                </header>
+                <div class="row">
+                    <div class="col-7">
+                        <h3 class="name pl-2">Beskrivning</h3>
+                        <p id="dagens-yrke-beskrivning" class="pl-2">
+                        </p>
+                    </div>
+                    <div class="col-5">
+                        <div class="row">
+                            <div class="col-12">
+                                <h3 class="name pl-2">Genomsnittlig bruttolön</h3>
+                                <p id="dagens-yrke-lon" class="pl-2">
+                                </p>
+                                <p class="copyright-text pl-2">
+                                    Denna medellön är hämtad från www.framtid.se
+                                </p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-12">
+                                <h3 class="name pl-2">Utbildning</h3>
+                                <p id="dagens-yrke-utbildning" class="pl-2">
+                                </p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-12">
+                                <h3 class="name pl-2">Framtidsutsikter</h3>
+                                <p id="dagens-yrke-framtidsutsikter" class="pl-2">
+                                </p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
