Added padding to contact information

--- a/site/index.html
+++ b/site/index.html
@@ -44,7 +44,7 @@ layout: default
                     </div>
                     <div class="row">
                         <div class="col-4">
-                            <p class="contact">
+                            <p class="contact" style="padding-left: 10px;">
                                 <i class="fa fa-envelope"></i> E-post: {{ member.E-POST }}<br />
                                 {% if member.TELEFON %}
                                 <i class="fa fa-phone"></i> Telefon: {{ member.TELEFON }}<br />
@@ -98,7 +98,7 @@ layout: default
                     </div>
                     <div class="row">
                         <div class="col-4">
-                            <p class="contact">
+                            <p class="contact" style="padding-left: 10px;">
                                 <i class="fa fa-envelope"></i> E-post: {{ member.E-POST }}<br />
                                 {% if member.TELEFON %}
                                 <i class="fa fa-phone"></i> Telefon: {{ member.TELEFON }}<br />
