--- a/site/index.html
+++ b/site/index.html
@@ -160,7 +160,7 @@ layout: default
                                 <p id="dagens-yrke-lon" class="pl-2">
                                 </p>
                                 <p class="copyright-text pl-2">
-                                    Denna medellön är hämtad från www.framtid.se
+                                    Denna medellön är hämtad från www.framtid.se.
                                 </p>
                             </div>
                         </div>
