--- a/site/index.html
+++ b/site/index.html
@@ -19,7 +19,7 @@ layout: default
                         <object data="assets/img/ElevHalsaLogo.svg" type="image/svg+xml" width="350">
                         </object>
                     </header>
-                    {% if member.DROP-IN_SLUT and member.DROP-IN_START %}
+                    {% if member.DROP-IN_START and member.DROP-IN_SLUT %}
                     <div class="drop-in name" data-dropin-end="{{ member.DROP-IN_SLUT }}" data-dropin-start="{{ member.DROP-IN_START }}">
                         <h2>Tillgänglig för drop-in just nu</h2>
                     </div>
