--- a/site/index.html
+++ b/site/index.html
@@ -19,8 +19,9 @@ layout: default
                         <object data="assets/img/ElevHalsaLogo.svg" type="image/svg+xml" width="350">
                         </object>
                     </header>
-                    {% if member.DROP-IN_START %}
+                    {% if member.DROP-IN_START and member.DROP-IN_SLUT %}
                     <div class="drop-in name" data-dropin-end="{{ member.DROP-IN_SLUT }}" data-dropin-start="{{ member.DROP-IN_START }}">
+                        {{ "now" | date: "%Y-%m-%d %H:%M" }}
                         <h2>Tillgänglig för drop-in just nu</h2>
                     </div>
                     {% endif %}
@@ -75,6 +76,7 @@ layout: default
                     </header>
                     {% if member.DROP-IN_SLUT and member.DROP-IN_START %}
                     <div class="drop-in procivitas name" data-dropin-end="{{ member.DROP-IN_SLUT }}" data-dropin-start="{{ member.DROP-IN_START }}">
+                        {{ "now" | date: "%Y-%m-%d %H:%M" }}
                         <h2>Tillgänglig för drop-in just nu</h2>
                     </div>
                     {% endif %}
